src/objects/sfLma__Package__c.object
<CustomObject>
    <description>A Package Object represents information about the package as it is defined in the developer&apos;s Salesforce Organization. A record is created or updated each time a new version of the package is uploaded to AppExchange.</description>
    <fields>
        <fullName>Is_Extension__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Denotes if this package is an extension of another package. Helps determine hierarchy in error handling and management situations.</inlineHelpText>
        <label>Is Extension</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Latest_Version_Id__c</fullName>
        <label>Latest Version Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Version_Install_Link__c</fullName>
        <label>Latest Version Install Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Latest_Version_Install_URL__c</fullName>
        <formula>&quot;https://login.salesforce.com/?startURL=/packaging/installPackage.apexp?p0=&quot;&amp; Latest_Version_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest Version Install URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Namespace__c</fullName>
        <inlineHelpText>The namespace this package is registered under. (Help sort inbound error messages to the proper package)</inlineHelpText>
        <label>Namespace</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Versions__c</fullName>
        <label>Number of Versions</label>
        <summaryForeignKey>sfLma__Package_Version__c.sfLma__Package__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Package_Interstitial_Content__c</fullName>
        <label>Package Interstitial Content</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sandbox_Install_Link__c</fullName>
        <formula>&quot;https://test.salesforce.com/?startURL=/packaging/installPackage.apexp?p0=&quot;&amp; Latest_Version_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sandbox Install Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Developer_Name__c</fullName>
        <label>Developer Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Developer_Org_ID__c</fullName>
        <label>Developer Org ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Help__c</fullName>
        <formula>(HYPERLINK(&quot;http://www.salesforce.com/docs/en/lma/index_CSH.htm#lma_package_detail.htm&quot;, &quot;Help for Packages&quot;)) &amp; &quot; &quot; &amp; (IMAGE(&quot;/img/btn_help.gif&quot;, &quot;Help&quot;))</formula>
        <label>Help</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Latest_Version__c</fullName>
        <label>Latest Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Lead_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User in the LMO who is responsible for managing the leads generated for this package. They will become the owner of any lead generated.</description>
        <label>Lead Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000001JvRJEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfLma__Package_ID__c</fullName>
        <label>Package ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Release_Date__c</fullName>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <label>Package</label>
    <listViews>
        <fullName>sfLma__All</fullName>
        <columns>NAME</columns>
        <columns>sfLma__Developer_Org_ID__c</columns>
        <columns>sfLma__Latest_Version__c</columns>
        <columns>sfLma__Release_Date__c</columns>
        <columns>Number_of_Versions__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Packages</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>